Disallow multiple inheritance